# xspf-gen

./: .gitignore  README.md  main.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  xspf-playlist.sh
xspf/: __init__.py  handler.py
